assets/css/typography.css
h1,
h2,
h3,
h4,
h5,
h6 {
  @apply mb-4 font-bold leading-none font-display;
}

h3 {
  @apply text-xl;

  @screen tablet {
    @apply text-2xl;
  }
}

p {
  @apply mb-4 font-body;

  @screen tablet {
    @apply text-lg;
  }

  code {
    font-size: 0.9em;
    @apply bg-neutral-200 p-px rounded-sm;
  }
}

hr {
  @apply my-8;
}

.entry article .content {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  ol,
  ul,
  p {
    @apply mx-auto max-w-2xl;
  }

  h1,
  h2 {
    &:not(:first-child) {
      @apply mt-8 mb-2;
    }
  }

  p,
  ol,
  ul,
  li {
    @screen tablet {
      @apply text-lg;
    }
  }

  ol,
  ul {
    li {
      @apply mb-2;
    }
  }

  ol {
    @apply list-decimal;
  }

  ul {
    list-style-type: circle;
  }

  a {
    &:link,
    &:visited {
      @apply underline text-primary-500;
    }

    &:hover {
      @apply no-underline text-key;
    }
  }

  pre,
  .highlight {
    @apply my-8;
  }

  .highlight {
    pre {
      @apply p-4 rounded text-sm;
    }
  }
}

